apps/guacamole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-svc
  namespace: tools
spec:
  selector:
    app: guacamole
  ports:
    - name: http
      port: 80
      targetPort: 8080
