apps/guacamole/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: guacamole
  namespace: tools
spec:
  parentRefs:
    - name: external-gateway
      namespace: kube-system
      sectionName: https-guacamole
  hostnames:
    - guacamole.lab.mxe11.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: guacamole-svc
          port: 80
